[gd_scene load_steps=22 format=3 uid="uid://eb4olff17t3"]

[ext_resource type="Script" path="res://Scenes/Levels/final_malo.gd" id="1_6oc1h"]
[ext_resource type="Texture2D" uid="uid://lvi1x4twpp0w" path="res://Assets/Sprites/Levels/sello.png" id="3_gypmi"]
[ext_resource type="AudioStream" uid="uid://0ge454sa5ux0" path="res://Assets/Music/Effects/Stamp Impact Sound Effect (mp3cut.net).mp3" id="4_ekx7r"]
[ext_resource type="Texture2D" uid="uid://drmstm88ixw2f" path="res://Assets/Sprites/UI/R.png" id="5_4hh2g"]
[ext_resource type="Texture2D" uid="uid://cnaqgj6vltyj" path="res://Assets/Sprites/Levels/boss/fotograma0000.png" id="5_sgamq"]
[ext_resource type="Texture2D" uid="uid://djchvftpjciww" path="res://Assets/Sprites/Levels/boss/bocata.png" id="6_7fo1i"]
[ext_resource type="AudioStream" uid="uid://dis5ydyu1o166" path="res://Scenes/Levels/bosshablando (mp3cut.net).mp3" id="6_y1ma0"]
[ext_resource type="FontFile" uid="uid://bre1cjdaepuvc" path="res://Assets/Fonts/PressStart2P-Regular.ttf" id="7_c762p"]
[ext_resource type="Texture2D" uid="uid://42u5jo6i2i6a" path="res://Assets/Sprites/Levels/boss/fotograma0001.png" id="8_cawvr"]
[ext_resource type="Texture2D" uid="uid://btu8g5qdybjca" path="res://Assets/Sprites/Levels/boss/fotograma0002.png" id="9_rrd80"]
[ext_resource type="Texture2D" uid="uid://daulh3pyqqsop" path="res://Assets/Sprites/Levels/boss/fotograma0003.png" id="10_dc41j"]
[ext_resource type="Texture2D" uid="uid://djg3t42mvp4h2" path="res://Assets/Sprites/Levels/boss/fotograma0004.png" id="11_3eb7l"]
[ext_resource type="Texture2D" uid="uid://l0uhaia2idh2" path="res://Assets/Sprites/Levels/boss/fotograma0005.png" id="12_7db6b"]
[ext_resource type="Texture2D" uid="uid://bit6sl0wysdlb" path="res://Assets/Sprites/Levels/boss/fotograma0006.png" id="13_njj0a"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0qkjg"]
animations = [{
"frames": [{
"duration": 1.3,
"texture": ExtResource("5_sgamq")
}, {
"duration": 1.0,
"texture": ExtResource("8_cawvr")
}, {
"duration": 1.0,
"texture": ExtResource("9_rrd80")
}, {
"duration": 1.0,
"texture": ExtResource("10_dc41j")
}, {
"duration": 1.0,
"texture": ExtResource("11_3eb7l")
}, {
"duration": 1.0,
"texture": ExtResource("12_7db6b")
}, {
"duration": 1.0,
"texture": ExtResource("13_njj0a")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="Animation" id="Animation_lfgtj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_uwxkt"]
resource_name = "desvanecer_entrada"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_2swc2"]
resource_name = "desvanecer_salir"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_7ubi0"]
resource_name = "desvanecer_salir_team"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 3.06667, 3.96667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xx4bh"]
_data = {
"RESET": SubResource("Animation_lfgtj"),
"desvanecer_entrada": SubResource("Animation_uwxkt"),
"desvanecer_salir": SubResource("Animation_2swc2"),
"desvanecer_salir_team": SubResource("Animation_7ubi0")
}

[sub_resource type="LabelSettings" id="LabelSettings_ylryn"]
font = ExtResource("7_c762p")
font_size = 24
font_color = Color(0.997975, 0.363308, 0.171272, 1)
outline_size = 6
outline_color = Color(0, 0, 0, 1)
shadow_size = 2

[node name="FinalMalo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6oc1h")

[node name="Fin" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="sello" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="EscenaJefe" type="AnimatedSprite2D" parent="."]
position = Vector2(640, 374)
sprite_frames = SubResource("SpriteFrames_0qkjg")

[node name="sello_sprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(635, 341)
rotation = 0.221653
scale = Vector2(1.50427, 1.51354)
texture = ExtResource("3_gypmi")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ekx7r")
volume_db = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xx4bh")
}

[node name="Bocata" type="Sprite2D" parent="."]
position = Vector2(961, 111)
scale = Vector2(0.489258, 0.409028)
texture = ExtResource("6_7fo1i")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 697.0
offset_top = -19.0
offset_right = 1216.0
offset_bottom = 131.0
label_settings = SubResource("LabelSettings_ylryn")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 701.0
offset_top = 57.0
offset_right = 1220.0
offset_bottom = 207.0
theme_override_font_sizes/font_size = 100
label_settings = SubResource("LabelSettings_ylryn")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="habla" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_y1ma0")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -798.0
offset_top = -436.0
offset_right = 749.0
offset_bottom = 462.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_4hh2g")

[connection signal="timeout" from="Fin" to="." method="_on_fin_timeout"]
[connection signal="timeout" from="sello" to="." method="_on_sello_timeout"]
